--- a/layout/templates/pages/home.html
+++ b/layout/templates/pages/home.html
@@ -90,7 +90,7 @@
         });
 	});
 	
-	$("#upload").button().click(function(){
+	$("#upload-form").button().click(function(){
 		$('{% include "dialogs/upload.html" %}').dialog({
 			autoOpen: false,
 			height: 400,
