--- a/layout/templates/pages/home.html
+++ b/layout/templates/pages/home.html
@@ -88,34 +88,34 @@
                 }
             }).dialog("open");
         });
-	});
-	
-	$("#upload-form").button().click(function(){
-		$('{% include "dialogs/upload.html" %}').dialog({
-			autoOpen: false,
-			height: 400,
-			width: 450,
-			modal: true,
-			buttons: {
-				"Add": function() {
-					var filePath = $("#filePath");
-					var allFields = $([]).add(filePath);
-					var bValid = true;
-					
-					allFields.removeClass( "ui-state-error" );
-
-					if (bValid) {
-						var filePathVal = filePath.val();
+		
+		$("#upload").button().click(function(){
+			$('{% include "dialogs/upload.html" %}').dialog({
+				autoOpen: false,
+				height: 400,
+				width: 450,
+				modal: true,
+				buttons: {
+					"Add": function() {
+						var filePath = $("#filePath");
+						var allFields = $([]).add(filePath);
+						var bValid = true;
 						
-						$.post("/upload", {filePath: filePathVal});
+						allFields.removeClass( "ui-state-error" );
+	
+						if (bValid) {
+							var filePathVal = filePath.val();
+							
+							$.post("/upload", {filePath: filePathVal});
+							$( this ).dialog( "close" );
+						}
+					},
+					Cancel: function() {
 						$( this ).dialog( "close" );
 					}
-				},
-				Cancel: function() {
-					$( this ).dialog( "close" );
 				}
-			}
-		}).dialog("open");
+			}).dialog("open");
+		});
 	});
 	</script>
 
