--- a/layout/templates/dialogs/upload.html
+++ b/layout/templates/dialogs/upload.html
@@ -1,6 +1,6 @@
 <div id="upload-form" title="Upload">\
 	<p class="validateTips">All form fields are required.</p>\
-	<form>\
+	<form id="upload-form-data" enctype="multipart/form-data"> >\
         <fieldset>\
             <label for="alias">Alias</label>\
             <input type="file" name="filePath" id="filePath" />\
