--- a/layout/templates/pages/index.html
+++ b/layout/templates/pages/index.html
@@ -37,5 +37,7 @@
     </a>
     &nbsp;
     <a href="#" id="gglLoginBtn">Login with Google</a>
+    
+    <img src="imgs/test.jpg" />
 
 {% endblock %}
