--- a/layout/templates/dialogs/upload.html
+++ b/layout/templates/dialogs/upload.html
@@ -3,7 +3,7 @@
 	<form>\
         <fieldset>\
             <label for="alias">Alias</label>\
-            <input id="fileupload" type="file" name="fileContent" data-url="/upload" />\
+            <input id="fileupload" type="file" name="fileContent" data-url="/pics/add" />\
         </fieldset>\
 	</form>\
 </div>
