--- a/layout/templates/pages/index.html
+++ b/layout/templates/pages/index.html
@@ -44,7 +44,7 @@
                 var lastPics = $("#lastPics");
                 
                 $.each(data, function(key, val) {
-                  lastPics.append("<img src=\"/pics/get/" + val[0] + ".jpg\" />" );
+                  lastPics.append("<img src=\"/pics/get/" + val[0] + ".jpg\" /><br />" );
                 });
               });
         });
