--- a/layout/templates/pages/index.html
+++ b/layout/templates/pages/index.html
@@ -3,8 +3,9 @@
 {% block scriptsAndStyles%}
 {% endblock%}
 
-{% block mainContent %}
-    <div id="fb-root"></div>
+{% block headerContent%}
+    
+        <div id="fb-root"></div>
     <script>
         window.fbAsyncInit = function() {
           FB.init({
@@ -38,6 +39,10 @@
     &nbsp;
     <a href="#" id="gglLoginBtn">Login with Google</a>
     
+{% endblock %}
+
+{% block mainContent %}
+  
     <script type="text/javascript">
         $(function() {
             $.getJSON("/pics/getlast", function(data) {
