--- a/layout/templates/base.html
+++ b/layout/templates/base.html
@@ -16,6 +16,17 @@
         
         <title>hyperload</title> 
     {% endblock %}
+    
+        <style type="text/css">
+            #header {
+                width: 100%;
+                height: 200px;
+            }
+            
+            #content {
+                width: 100%;
+            }
+        </style>
     </head>
     <body>
         <div id="header">
