--- a/layout/templates/base.html
+++ b/layout/templates/base.html
@@ -20,11 +20,12 @@
         <style type="text/css">
             #header {
                 width: 100%;
-                height: 200px;
+                height: 100px;
             }
             
             #content {
                 width: 100%;
+                text-align: center;
             }
         </style>
     </head>
