--- a/layout/templates/base.html
+++ b/layout/templates/base.html
@@ -27,6 +27,10 @@
                 width: 100%;
                 text-align: center;
             }
+            
+            #pic-post {
+                margin-bottom: 20px;
+            }
         </style>
     </head>
     <body>
