--- a/layout/templates/pages/home.html
+++ b/layout/templates/pages/home.html
@@ -3,6 +3,10 @@
 {% block scriptsAndStyles%}
 {% endblock%}
 
+{% block headerContent%}
+    <a href="/" >На Главную</a>
+{% endblock%}
+
 {% block mainContent %}
     <a href="#" id="logoutBtn">logout</a>
     Wellcome!!!
