--- a/layout/templates/pages/index.html
+++ b/layout/templates/pages/index.html
@@ -4,8 +4,9 @@
 {% endblock%}
 
 {% block headerContent%}
+    <a href="/home" >Домой</a>
     
-        <div id="fb-root"></div>
+    <div id="fb-root"></div>
     <script>
         window.fbAsyncInit = function() {
           FB.init({
