--- a/layout/templates/base.html
+++ b/layout/templates/base.html
@@ -14,7 +14,7 @@
             <link rel="stylesheet" type="text/css" href="/css" />
         {% endblock%}
         
-        <title>hyperload</title> 
+        <title>picpuk</title> 
     {% endblock %}
     
         <style type="text/css">
