--- a/layout/templates/pages/index.html
+++ b/layout/templates/pages/index.html
@@ -4,6 +4,24 @@
 {% endblock%}
 
 {% block headerContent%}
+    <div id="fb-root"></div>
+    <script type="text/javascript">
+        window.fbAsyncInit = function() {
+          FB.init({
+            appId      : '376067512445754',
+            status     : true, 
+            cookie     : true,
+            xfbml      : true,
+            oauth      : true,
+          });
+        };
+        (function(d){
+           var js, id = 'facebook-jssdk'; if (d.getElementById(id)) {return;}
+           js = d.createElement('script'); js.id = id; js.async = true;
+           js.src = "//connect.facebook.net/en_US/all.js";
+           d.getElementsByTagName('head')[0].appendChild(js);
+         }(document));
+    </script>
     
     {% if isAuthorized() %}
         <a href="/home" >Домой</a>
