--- a/layout/templates/pages/home.html
+++ b/layout/templates/pages/home.html
@@ -27,6 +27,8 @@
 	$(function() {
         $("#logoutBtn").click(hyperload.access.logout);
 		
+		$("#fileupload").fileupload({});
+		
 		//$("#upload").button().click(function(){
 		//	var upload = $('{% include "dialogs/upload.html" %}');
 		//	
