--- a/layout/templates/js/blueimp-jQuery-File-Upload/index.html
+++ b/layout/templates/js/blueimp-jQuery-File-Upload/index.html
@@ -104,7 +104,8 @@
         <!-- The loading indicator is shown during file processing -->
         <div class="fileupload-loading"></div>
         <br>
-
+        <!-- The table listing the files available for upload/download -->
+        <table class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody></table>
     </form>
     <br>
     <div class="well">
