--- a/layout/templates/js/blueimp-jQuery-File-Upload/index.html
+++ b/layout/templates/js/blueimp-jQuery-File-Upload/index.html
@@ -105,7 +105,7 @@
         <div class="fileupload-loading"></div>
         <br>
         <!-- The table listing the files available for upload/download -->
-        <table class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody></table>
+        <table class="table table-striped"><tbody class="files" data-toggle="modal-gallery" ></tbody></table>
     </form>
     <br>
     <div class="well">
