--- a/layout/templates/js/blueimp-jQuery-File-Upload/index.html
+++ b/layout/templates/js/blueimp-jQuery-File-Upload/index.html
@@ -75,7 +75,7 @@
                 <span class="btn btn-success fileinput-button">
                     <i class="icon-plus icon-white"></i>
                     <span>Add files...</span>
-                    <input type="file" name="files[]" >
+                    <input type="file" name="fileContent" >
                 </span>
                 <button type="submit" class="btn btn-primary start">
                     <i class="icon-upload icon-white"></i>
