--- a/layout/templates/pages/home.html
+++ b/layout/templates/pages/home.html
@@ -72,6 +72,8 @@
 	});
 </script>
 
+{% include "widgets/upload.html" %}
+
 <script type="text/javascript">
 	$(function() {
 		$.getJSON("/pics/getuserpics", function(data) {
