--- a/layout/templates/pages/home.html
+++ b/layout/templates/pages/home.html
@@ -30,7 +30,7 @@
 		//$("#fileupload").fileupload({});
 		
 		//$("#upload").button().click(function(){
-		//	var upload = $('{% include "dialogs/upload.html" %}');
+		//	var upload = $();
 		//	
 		//	upload.find('#fileupload').fileupload({});
 		//	
