--- a/layout/templates/widgets/upload.html
+++ b/layout/templates/widgets/upload.html
@@ -90,6 +90,9 @@
 </div>
 <!-- The template to display files available for upload -->
 <script id="template-upload" type="text/x-tmpl">
+    
+    {% raw %}
+    
 {% for (var i=0, file; file=o.files[i]; i++) { %}
     <tr class="template-upload fade">
         <td class="preview"><span class="fade"></span></td>
@@ -118,9 +121,15 @@
         {% } %}</td>
     </tr>
 {% } %}
+
+    {% endraw %}
+
 </script>
 <!-- The template to display files available for download -->
 <script id="template-download" type="text/x-tmpl">
+    
+    {% raw %}
+    
 {% for (var i=0, file; file=o.files[i]; i++) { %}
     <tr class="template-download fade">
         {% if (file.error) { %}
@@ -147,6 +156,9 @@
         </td>
     </tr>
 {% } %}
+
+    {% endraw %}
+
 </script>
 
 <script src="blueimp/js/vendor/jquery.ui.widget.js"></script>
