--- a/layout/templates/base.html
+++ b/layout/templates/base.html
@@ -34,12 +34,11 @@
             }
         </style>
         
-        <!-- Bootstrap CSS Toolkit styles -->
-        <link rel="stylesheet" href="http://blueimp.github.com/cdn/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/bootstrap/css/bootstrap-responsive.min.css">
+        
         <!-- Generic page styles -->
         <link rel="stylesheet" href="blueimp/css/style.css">
-        <!-- Bootstrap styles for responsive website layout, supporting different screen sizes -->
-        <link rel="stylesheet" href="http://blueimp.github.com/cdn/css/bootstrap-responsive.min.css">
         <!-- Bootstrap CSS fixes for IE6 -->
         <!--[if lt IE 7]><link rel="stylesheet" href="http://blueimp.github.com/cdn/css/bootstrap-ie6.min.css"><![endif]-->
         <!-- Bootstrap Image Gallery styles -->
